# bonfida-vesting-cli

./: Cargo.toml  README.md  vesting.json.example
src/: cli_args.rs  main.rs
