[package]
name = "bonfida-vesting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.4.0"
clap = { version = "3.1.9", features = [ "derive" ] }
solana-program = "1.5.0"
solana-client = "1.10.9"
solana-transaction-status = "1.10.9"
solana-sdk = "1.5.0"
serde = "1.0"
serde_json = "1.0"
spl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}
token-vesting =  { version = "0.1.0", git="https://github.com/Bonfida/token-vesting", features=["no-entrypoint"] }
spl-token = {version = "3.0.1", features = ["no-entrypoint"]}